fnished feature 7, 8, and 9

--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -21,6 +21,14 @@
 				<li class="nav-item active">
 					<a class="nav-link" th:href="@{/}">Home</a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" th:href="@{/}">Pegawai</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" th:href="@{/jabatan/viewall}">Jabatan</a>
+				</li>
+					
+					
 			</ul>
 		</div>
 	</nav>
