--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,16 +39,16 @@
 			<br>
 			<div class="row">
 				<div class="col-md-6">
-					<div class="card">
+					<div class="card">	
 						<div class="card-header">
 							<h3>Lihat Detail Jabatan</h3>
 						</div>
-						<form th:action="@{/jabatan}" method="GET">
+						<form th:action="@{/jabatan/view}" method="GET">
 							<div class="card-body">
 								<label for="jabatan">Masukan Nama Jabatan</label>
 								<select type="text" name="jabatan" class="form-control" >
 								<option  >pilih jabatan</option>
-								<option th:each="jabatan : ${jabatanList}" th:value="${jabatan.nama}"
+								<option th:each="jabatan : ${jabatanList}" th:value="${jabatan.id}"
 										th:text="${jabatan.nama}" ></option>
 								</select><br>
 								<button type="submit" class="btn btn-primary">Lihat</button>
