--- a/src/main/resources/templates/hapus-jabatan-sukses.html
+++ b/src/main/resources/templates/hapus-jabatan-sukses.html
@@ -15,7 +15,7 @@
 	<div style="padding: 32px; text-align: center;">
 
 		<div class="alert alert-success">
-			<strong>Tambah Jabatan Sukses!</strong> Jabatan baru telah masuk ke database
+			<strong>Hapus Sukses!</strong> Jabatan berhasil dihapus
 		</div>
 		
 		<span>Redirecting in ... </span>
@@ -26,7 +26,7 @@
 				var count = div.textContent * 1 - 1;
 				div.textContent = count;
 				if (count <= 0) {
-					location.replace("");
+					location.replace("http://localhost:8080");
 				}
 			}, 1000);
 		</script>
