on progress feature 10, still on controller

--- a/src/main/resources/templates/data-semua-jabatan.html
+++ b/src/main/resources/templates/data-semua-jabatan.html
@@ -23,8 +23,9 @@
 			<thead>
 				<tr>
 					<th>Nama</th>
-					<th>Deskripsi</th>
+					<th>Deskripsiv </th>
 					<th>Gaji Pokok</th>
+					
 				</tr>
 			</thead>
 
