--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -27,7 +27,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" th:href="@{/jabatan/viewall}">Jabatan</a>
 				</li>
-					
+				<li class="nav-item active">
+					<a class="nav-link" th:href="@{/jabatan/tambah}">Tambah Jabatan</a>
+				</li>					
 					
 			</ul>
 		</div>
