--- a/src/main/resources/templates/ubah-jabatan.html
+++ b/src/main/resources/templates/ubah-jabatan.html
@@ -40,7 +40,7 @@
 							<input type="text" th:field="*{gajiPokok}" />
 							
 							<br> <br>
-							<button type="submit" class="btn btn-primary" >Submit</button>
+							<button type="submit" class="btn btn-success" >Submit</button>
 						</form>
 					</div>
 				</div>
